--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,6 +7,7 @@
     <title>Salut ma Gueule</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- TODO tag by Djer |THymeleaf| Tu peux regrouper ces deux Link en un seul. en mode "dev front" un le deuxième ne fonctionne JALAIS en en mode "back" le premier ne fonctionne jamais-->
     <link href="../static/css/style.css" rel="stylesheet">
     <link th:href="@{css/style.css}" rel="stylesheet">   
 </head>
